stylesheet.less
/* ... */
div.widget .extendednavigation ul, div.widget.extendednavigation ul {
	display: block;
	li {
		display: block; 
	}
}

div.widget .extendednavigation > ul, div.widget.extendednavigation > ul {
	display: block!important;
}

body.menu-active .widget.extendednavigation#slide-menu { 
	right: 0px; 
}

body.menu-active #main { 
	right: 320px; 
	.transition( all, 0.5s, ease);
    -webkit-backface-visibility: hidden;
    @media @mobile {
    	right: 250px;
    }
}

body #main, body .bk-header {
	.transition( all, 0.5s, ease);
	-webkit-backface-visibility: hidden;
}

body.menu-active .bk-nav { 
	position: absolute;
	right: 0; 
}


// Selected state

.extendednavigation ul li.selected, .extendednavigation ul li:hover ul li.selected, .extendednavigation ul li.folder.selected ul li.selected, .extendednavigation ul li.folder.selected {
    a, .text {
        text-decoration: underline;
    }
}

.extendednavigation ul li.folder.selected ul li .text {
    color: @font-swatch6-color;
}

/* ===============================
   FEATURE
   =============================== */

.widget.feature .feature-bgimg .content {
	vertical-align: bottom;
	.spare {
		padding: 0 40px;
		margin: 0 auto;
		max-width: 1024px;
		@media @mobile {
			padding: 20px;
		}
		h2 {
			margin-bottom: 12px;
            font-family:@font-swatch8-font-family;
            font-size:@font-swatch8-font-size;
            font-weight: @font-swatch8-font-weight;
            line-height:@font-swatch8-line-height;
            color: @font-swatch8-color;
            letter-spacing: @font-swatch8-letter-spacing;
		}
        h3 {
            font-family:@font-swatch9-font-family;
            font-size:@font-swatch9-font-size;
            font-weight: @font-swatch9-font-weight;
            line-height:@font-swatch9-line-height;
            color: @font-swatch9-color;
        }
        h2, h3 {
            @media @mobile {
                margin-bottom: 3px;
            }
        }
		h2 span, h3 span {
			background-color: darken(@color-swatch3,23%);
			width: auto;
			padding: 8px 15px;
            display: inline-block;
		}
        h2 span {
            @media @mobile {
                font-size: @font-swatch3-font-size;
                line-height: @font-swatch3-line-height;
            }
        }
        h3 span {
            @media @mobile {
                font-size: @font-swatch5-font-size;
                line-height: @font-swatch5-line-height;
            } 
        }
		.feature-btn button.btn {
			padding: 8px 15px 13px;
			span:after {
				content: '\003E';
				font-size: 1em;
				padding-left: 10px;
			}
		}
	}
}

/* ===============================
   BLOCK QUOTE
   =============================== */

  blockquote {
    &:before {
        color: @color-swatch3;
    }
  }

/* ===============================
   FORMS
   =============================== */

.widget.profile form {
    margin: 0 0 10px;
    fieldset input { 
        background-color: @color-swatch1;
        border: 1px solid darken(@color-swatch2,2%);
        @media @mobile {
            width: 100%;
        }
    }
}

.contactform input, .widget.signupform form fieldset input {
    background-color: @color-swatch2;
    border: 1px solid darken(@color-swatch2,2%);
    margin-bottom: 10px;
    text-indent: 0;
    margin-right: 5px;
    height: 42px;
    @media @tablet {
    	width: 100%;
    }
}

.signupform fieldset label {
    margin-bottom: 0;
}

.contactform label {
    color: @color-swatch3;
}

.contactform textarea {
    background-color: @color-swatch2;
    border: 1px solid darken(@color-swatch2,2%);
    margin-bottom: 5px;
}

.blogsearch {
    form {
        label {
        	display: block;
            @media @mobile {
                margin-bottom: 20px;
                display: block;
            }
        }
        input {
            -webkit-appearance: none;
            -webkit-border-radius: 0px;
            -moz-border-radius: 0px;
            border-radius: 0px;
            background-color: @color-swatch2;
            padding: 0;
            text-indent: 0;
            height: 42px;
            border: 1px solid darken(@color-swatch2,2%);
            margin-bottom: 20px;
            margin-right: 5px;
            @media @mobile {
                width: 100%;
            }
        }
        button.blog-search-submit-button {
        	padding: 7px 15px 10px;
        }
    }
}

/*  ===============================
    BUTTONS
    =============================== */

.signupform fieldset button {
    padding: 6px 18px 9px;
}

.widget.button button,
button.btn, 
.widget.profile form button, 
.signupform fieldset button, 
.contactform button.btn, 
.btn, 
.blogsearch form button, 
.checkout-order-button, 
.checkout-empty-link,
.tweet a,
.widget.paypalbuynow .widget.button.paypal,
.blog-post-more-link a,
.blog-list-footer a,
a.basket-summary-empty-cta.btn, 
.btn.basket-summary-submit {
    font-family: @font-swatch7-font-family;
    color: @font-swatch7-color;
    font-size: @font-swatch7-font-size;
    font-weight: @font-swatch7-font-weight;
    line-height: @font-swatch7-line-height;
    background-color: @font-swatch7-background-color;
    border: none;
    .border-radius(3px);
    margin: 5px 0;
    padding: 8px 18px;
    text-decoration: none;
    @media @mobile {
        padding: 10px 15px;
        margin: 10px 0;
    }
    &:hover {
        background-color: @font-swatch7-background-color-hover;
    }
} 

a.basket-summary-empty-cta.btn {
    padding: 13px 18px !important;
}

.widget.profile form button.btn {
	padding: 7px 15px 10px;
}


.tweet {
    margin: 5px 0;
}

.widget.clicktocall {
    a, a:hover {
        @media @mobile {
            .border-radius(3px);
            margin: 5px 0;
            padding: 15px 15px 15px 38px;
        }
    }
}

.widget.ecombasket .ecombasket-pull, .ecombasket-checkout-link {
    background-color: @font-swatch7-background-color;
    border: none;
    .border-radius(3px);
    &:hover {
        text-decoration: none;
    }
} 
/* ... */

